syntax = "proto3";

package rpc;

option go_package = "github.com/stripe/stripe-cli/rpc";

message SamplesListRequest {}

message SamplesListResponse {
  message SampleData {
    string name = 1;
    string url = 2;
    string description = 3;
  }
  repeated SampleData samples = 1;
}
